remove old stuff

--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
         </script>
         <script src="javascript.util.js"></script>
         <script src="jsts.js"></script>
-        <script src="rot6.js"></script><script src="interactivemap.js"></script>
+        <script src="interactivemap.js"></script>
 	</body>
 </html>
