--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 		<title>Dota 2 Interactive Map 3</title>
         <meta name="description" content="Dota 2 Interactive Map. View, pan, and zoom in on any part of the Dota 2 map. Turn on various overlays for more information, place wards to see sight ranges, and measure distances.">
         <meta name="author" content="devilesk">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="content-type" content="text/html;charset=UTF-8">
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="OpenLayers/theme/default/style.css">
 		<link rel="stylesheet" type="text/css" href="interactivemap.css" />
 	</head>
 	<body>
-		<div style="width:100%; height:100%" id="map"></div>
+		<div id="map"></div>
 		<div id="controls-container" class="controls-container">
-            <div id="controls-max" class="maximizeDiv olButton controls-button olAlphaImg" style="position: absolute;"><img width="18" height="18" id="OpenLayers_Control_MaximizeDiv_innerImage" src="OpenLayers/dark/zoom-plus-mini.png" style="position: relative;"></div>
-            <div id="controls-min" class="minimizeDiv olButton controls-button olAlphaImg" style="position: absolute;"><img width="18" height="18" id="OpenLayers_Control_MinimizeDiv_innerImage" src="OpenLayers/dark/layer-switcher-minimize.png" style="position: relative;"></div>
+            <div id="controls-max" class="maximizeDiv olButton controls-button olAlphaImg"><img width="18" height="18" id="OpenLayers_Control_MaximizeDiv_innerImage" src="OpenLayers/dark/zoom-plus-mini.png"></div>
+            <div id="controls-min" class="minimizeDiv olButton controls-button olAlphaImg"><img width="18" height="18" id="OpenLayers_Control_MinimizeDiv_innerImage" src="OpenLayers/dark/layer-switcher-minimize.png"></div>
             <div class="controls">
                 <ul id="controls-list">
                     <b>Map Controls</b>
@@ -62,9 +63,6 @@
                 </div>
             </div>
         </div>
-        <img id="elevation" style="display:none" src="elevation.png" />
-        <canvas style="display:none" id="elevation-canvas"></canvas>
-        <canvas style="position:absolute;bottom:0;left:0" id="canvas"></canvas>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
         <script src="OpenLayers/OpenLayers.js"></script>
