--- a/index.html
+++ b/index.html
@@ -19,32 +19,22 @@
                 <ul id="controls-list">
                     <b>Map Controls</b>
                     <li>
-                        <input type="radio" name="type" value="none" id="noneToggle" checked="checked" />
-                        <label for="noneToggle">Navigate</label>
+                        <label for="noneToggle"><input type="radio" name="type" value="none" id="noneToggle" checked="checked" /> Navigate</label>
                     </li>
                     <li>
-                        <input type="radio" name="type" value="line" id="lineToggle" />
-                        <label for="lineToggle">Measure Distance</label>
+                        <label for="lineToggle"><input type="radio" name="type" value="line" id="lineToggle" /> Measure Distance</label>
                     </li>
                     <li>
-                        <input type="radio" name="type" value="circle" id="circleToggle" />
-                        <label for="circleToggle">Measure Circle</label>
+                        <label for="circleToggle"><input type="radio" name="type" value="circle" id="circleToggle" /> Measure Circle</label>
                     </li>
                     <li>
-                        <input type="radio" name="type" value="observerclick" id="observerToggle" />
-                        <label for="observerToggle">Place Observer Ward</label>
+                        <label for="observerToggle"><input type="radio" name="type" value="observerclick" id="observerToggle" /> Place Observer Ward</label>
                     </li>
                     <li>
-                        <input type="radio" name="type" value="sentryclick" id="sentryToggle" />
-                        <label for="sentryToggle">Place Sentry Ward</label>
+                        <label for="sentryToggle"><input type="radio" name="type" value="sentryclick" id="sentryToggle" /> Place Sentry Ward</label>
                     </li>
-                    <!--<li>
-                        <input type="radio" name="type" value="laneviewclick" id="laneviewToggle" />
-                        <label for="laneviewToggle">Lane View</label>
-                    </li>-->
                     <li>
-                        <input type="checkbox" id="coordControl" checked=true/>
-                        <label for="coordControl">Show Coordinates</label>
+                        <label for="coordControl"><input type="checkbox" id="coordControl" checked=true/> Show Coordinates</label>
                     </li>
                     <li>
                         <button id="update">UPDATE</button><br>
@@ -65,7 +55,7 @@
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
-        <script src="OpenLayers/OpenLayers.js"></script>
+        <script src="ol2/build/OpenLayers.js"></script>
         <script type="text/javascript">
 
           var _gaq = _gaq || [];
