remove old ol, move images

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="author" content="devilesk">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="OpenLayers/theme/default/style.css">
+        <link rel="stylesheet" type="text/css" href="openlayers.css">
 		<link rel="stylesheet" type="text/css" href="interactivemap.css" />
 	</head>
 	<body>
 		<div id="map"></div>
 		<div id="controls-container" class="controls-container">
-            <div id="controls-max" class="maximizeDiv olButton controls-button olAlphaImg"><img width="18" height="18" id="OpenLayers_Control_MaximizeDiv_innerImage" src="OpenLayers/dark/zoom-plus-mini.png"></div>
-            <div id="controls-min" class="minimizeDiv olButton controls-button olAlphaImg"><img width="18" height="18" id="OpenLayers_Control_MinimizeDiv_innerImage" src="OpenLayers/dark/layer-switcher-minimize.png"></div>
+            <div id="controls-max" class="maximizeDiv olButton controls-button olAlphaImg"><img width="18" height="18" id="OpenLayers_Control_MaximizeDiv_innerImage" src="img/zoom-plus-mini.png"></div>
+            <div id="controls-min" class="minimizeDiv olButton controls-button olAlphaImg"><img width="18" height="18" id="OpenLayers_Control_MinimizeDiv_innerImage" src="img/layer-switcher-minimize.png"></div>
             <div class="controls">
                 <ul id="controls-list">
                     <b>Map Controls</b>
