--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
         </script>
         <!-- @if NODE_ENV='development' -->
-        <script src="ol2/build/OpenLayers.js"></script>
+        <script src="../ol2/build/OpenLayers.js"></script>
         <!-- @endif -->
         <script src="interactivemap.js"></script>
 	</body>
