--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
         <!-- @if NODE_ENV='dev' -->
         <script src="../ol2/build/OpenLayers.js"></script>
         <script src="javascript.util.js"></script>
-        <script src="jsts.js"></script>
+        <script src="jsts.min.js"></script>
         <script src="bundle.js"></script>
         <!-- @endif -->
         <!-- @if NODE_ENV='prod' !>
