refactor and add vision simulation toggle

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,9 @@
                         <label for="sentryToggle"><input type="radio" name="type" value="sentryclick" id="sentryToggle" /> Place Sentry Ward</label>
                     </li>
                     <li>
+                        <label for="visionSimulationControl"><input type="checkbox" id="visionSimulationControl" checked=true/> Vision Simulation</label>
+                    </li>
+                    <li>
                         <label for="coordControl"><input type="checkbox" id="coordControl" checked=true/> Show Coordinates</label>
                     </li>
                     <li id="dataControl-container">
