add mode query string, fix tree query string, change mousedown listener to click

--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,10 @@
                 <ul id="controls-list" class="controls-list left">
                     <b>Map Controls</b>
                     <li>
-                        <label for="noneToggle"><input type="radio" name="type" value="none" id="noneToggle" checked="checked" />Navigate</label>
+                        <label for="navigateToggle"><input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />Navigate</label>
                     </li>
                     <li>
-                        <label for="observerToggle"><input type="radio" name="type" value="observerclick" id="observerToggle" />Place Observer Ward</label>
+                        <label for="observerToggle"><input type="radio" name="mode" value="observer" id="observerToggle" />Place Observer Ward</label>
                         <ul>
                             <li>
                                 <label for="visionSimulationControl"><input type="checkbox" id="visionSimulationControl" checked=true/>Vision Simulation</label>
@@ -37,13 +37,13 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="sentryToggle"><input type="radio" name="type" value="sentryclick" id="sentryToggle" />Place Sentry Ward</label>
+                        <label for="sentryToggle"><input type="radio" name="mode" value="sentry" id="sentryToggle" />Place Sentry Ward</label>
                     </li>
                     <li>
-                        <label for="lineToggle"><input type="radio" name="type" value="line" id="lineToggle" />Measure Distance</label>
+                        <label for="lineToggle"><input type="radio" name="mode" value="line" id="lineToggle" />Measure Distance</label>
                     </li>
                     <li>
-                        <label for="circleToggle"><input type="radio" name="type" value="circle" id="circleToggle" />Measure Circle</label>
+                        <label for="circleToggle"><input type="radio" name="mode" value="circle" id="circleToggle" />Measure Circle</label>
                     </li>
                     <li>
                         <label for="coordControl"><input type="checkbox" id="coordControl" checked=true/>Show Coordinates</label>
