--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,9 @@
 		<div id="controls-container" class="controls-container">
             <a id="controls-max" class="controls-button maximizeDiv olButton olAlphaImg" href="#">+</a>
             <a id="controls-min" class="controls-button minimizeDiv olButton olAlphaImg" href="#">&times;</a>
-            <div class="controls">
+            <div class="controls left">
                 <ul id="controls-list" class="controls-list left">
-                    <b>Map Controls</b>
+                    <li class="controls-list-header">Map Controls</li>
                     <li>
                         <label for="navigateToggle"><input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />Navigate</label>
                     </li>
