add reset button

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,9 @@
                             <option value="687">6.87</option>
                         </select>
                     </li>
+                    <li>
+                        <input type="button" id="reset" value="Reset Map"/>
+                    </li>
                 </ul>
                 <div id="output-panel">
                     <div id="output"></div>
