--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
         <!-- @if NODE_ENV='dev' -->
         <script src="../ol2/build/OpenLayers.js"></script>
         <script src="bundle.js"></script>
-        <script>InteractiveMap('http://devilesk.com/media/images/map/', 'img/map_data2.png');</script>
+        <script>InteractiveMap('http://devilesk.com/media/images/map/', 'img/map_data.png');</script>
         <!-- @endif -->
         <!-- @if NODE_ENV='prod' !>
         <script src="bundle.min.js"></script>
