update openlayers build

--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!-- @if NODE_ENV='dev' -->
-        <script src="../ol2/build/OpenLayers.js"></script>
+        <script src="../src/OpenLayers.js"></script>
         <script src="bundle.js"></script>
         <script>InteractiveMap('http://devilesk.com/media/images/map/', 'img/map_data.png');</script>
         <!-- @endif -->
