--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
         <!-- @endif -->
 	</head>
 	<body>
-		<div id="map"></div>
+		<div id="map1" style="width: 100%; height: 100%"></div>
 		<div id="controls-container" class="controls-container">
             <a id="controls-max" class="controls-button maximizeDiv olButton olAlphaImg" href="#">+</a>
             <a id="controls-min" class="controls-button minimizeDiv olButton olAlphaImg" href="#">&times;</a>
