--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,10 @@
                             <li>
                                 <label for="alwaysSimulateControl"><input type="checkbox" id="alwaysSimulateControl" checked=true/>Follow Cursor</label>
                             </li>
+                            <li id="vision-radius-container">
+                                <label id="vision-radius-label">Radius</label>
+                                <input type="number" id="vision-radius" value="1600" min="0" max="3000" step="25" />
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -47,6 +51,9 @@
                     </li>
                     <li>
                         <label for="coordControl"><input type="checkbox" id="coordControl" checked=true/>Show Coordinates</label>
+                    </li>
+                    <li>
+                        <label for="darknessControl"><input type="checkbox" id="darknessControl"/>Darkness</label>
                     </li>
                     <li id="dataControl-container">
                         <label id="dataControl-label" for="dataControl">Version Data</label>
@@ -68,6 +75,7 @@
                 </div>
             </div>
         </div>
+        <div id="visible-area"></div>
         <!-- @if NODE_ENV='dev' -->
         <script src="../src/OpenLayers.js"></script>
         <script src="bundle.js"></script>
