--- a/www/index.html
+++ b/www/index.html
@@ -1,96 +1,149 @@
+<!doctype html>
 <html>
-	<head>
-        <link rel="shortcut icon" href="/media/favicon.png">
-		<title>Dota 2 Interactive Map 3</title>
-        <meta name="description" content="Dota 2 Interactive Map. View, pan, and zoom in on any part of the Dota 2 map. Turn on various overlays for more information, place wards to see sight ranges, and measure distances.">
-        <meta name="author" content="devilesk">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-        <!-- @if NODE_ENV='dev' -->
-        <link rel="stylesheet" type="text/css" href="openlayers.css">
-        <link rel="stylesheet" type="text/css" href="interactivemap.css" />
-        <!-- @endif -->
-        <!-- @if NODE_ENV='prod' !>
-        <link rel="stylesheet" type="text/css" href="app.min.css">
-        <!-- @endif -->
-	</head>
-	<body>
-		<div id="map1" style="width: 100%; height: 100%"></div>
-		<div id="controls-container" class="controls-container left">
-            <div id="controls-max" class="controls-button left maximizeDiv" style="display:none">+</div>
-            <div id="controls-min" class="controls-button left minimizeDiv">&times;</div>
-            <div class="controls left">
-                <ul id="controls-list" class="controls-list left">
-                    <li class="controls-list-header">Map Controls</li>
-                    <li>
-                        <label for="navigateToggle"><input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />Navigate</label>
-                    </li>
-                    <li>
-                        <label for="observerToggle"><input type="radio" name="mode" value="observer" id="observerToggle" />Place Observer Ward</label>
-                        <ul>
-                            <li>
-                                <label for="visionSimulationControl"><input type="checkbox" id="visionSimulationControl" checked=true/>Vision Simulation</label>
-                            </li>
-                            <li>
-                                <label for="alwaysSimulateControl"><input type="checkbox" id="alwaysSimulateControl" checked=true/>Follow Cursor</label>
-                            </li>
-                            <li id="vision-radius-container">
-                                <label id="vision-radius-label">Radius</label>
-                                <input type="number" id="vision-radius" value="1600" min="0" max="3000" step="25" />
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <label for="sentryToggle"><input type="radio" name="mode" value="sentry" id="sentryToggle" />Place Sentry Ward</label>
-                    </li>
-                    <li>
-                        <label for="lineToggle"><input type="radio" name="mode" value="line" id="lineToggle" />Measure Distance</label>
-                    </li>
-                    <li>
-                        <label for="circleToggle"><input type="radio" name="mode" value="circle" id="circleToggle" />Measure Circle</label>
-                    </li>
-                    <li style="display:none">
-                        <label for="coordControl"><input type="checkbox" id="coordControl" checked=true/>Show Coordinates</label>
-                    </li>
-                    <li>
-                        <label for="nightControl"><input type="checkbox" id="nightControl"/>Night</label>
-                    </li>
-                    <li>
-                        <label for="darknessControl"><input type="checkbox" id="darknessControl"/>Darkness</label>
-                    </li>
-                    <li id="dataControl-container">
-                        <label id="dataControl-label" for="dataControl">Version Data</label>
-                        <select id="dataControl">
-                            <option value="700">7.00</option>
-                            <option value="687">6.87</option>
-                        </select>
-                    </li>
-                    <li>
-                        <input type="button" id="reset" value="Reset Map"/>
-                    </li>
-                </ul>
-                <div id="output-panel">
-                    <div id="output"></div>
-                    <div id="traveltime-container" style="display: none">
-                        <div>Travel time: <span id="traveltime"></span>s</div>
-                        <div id="movespeed-container">with <input type="text" id="movespeed" value="300" /> ms</div>
+  <head>
+    <meta charset="utf-8">
+    <title>Using Browserify with OpenLayers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
+    <link rel="stylesheet" href="ol3-popup.css" type="text/css">
+    <link rel="stylesheet" href="app.css" type="text/css">
+  </head>
+  <body>
+    <div id="menu-left" class="menu-panel pos-left collapsed-horizontal">
+        <a href="javascript:void(0)" id="menu-left-close-btn" class="close btn pos-left">&times;</a>
+        <div class="menu-contents">
+            <div class="menu-item">
+                <input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />
+                <label for="navigateToggle" class="checkbox">Navigate</label>
+            </div>
+            <div class="menu-item">
+                <input type="radio" name="mode" value="ward" id="wardToggle" />
+                <label for="wardToggle" class="checkbox">Place Ward</label>
+                <div class="menu-item-group sub-menu"><!--
+                 --><div class="menu-item inline">
+                        <input type="radio" name="ward-type" value="observer" id="observer-option" />
+                        <label for="observer-option" class="checkbox">Observer</label>
+                    </div><!--
+                 --><div class="menu-item inline">
+                        <input type="radio" name="ward-type" value="sentry" id="sentry-option"  checked="checked" />
+                        <label for="sentry-option" class="checkbox">Sentry</label>
                     </div>
                 </div>
-                <div id="last-update"></div>
+            </div>
+            <div class="menu-item">
+                <input type="radio" name="mode" value="measure" id="measureToggle" />
+                <label for="measureToggle" class="checkbox">Measure</label>
+                <div class="menu-item-group sub-menu"><!--
+                 --><div class="menu-item inline">
+                        <input type="radio" name="measure-type" value="line" id="line-option"  checked="checked" />
+                        <label for="line-option" class="checkbox">Line</label>
+                    </div><!--
+                 --><div class="menu-item inline">
+                        <input type="radio" name="measure-type" value="circle" id="circle-option" />
+                        <label for="circle-option" class="checkbox">Circle</label>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="menu-item">
+                <label class="text-label" for="vision-radius">Radius</label><!--
+                --><input type="number" id="vision-radius" value="1600" min="0" max="3000" step="25" />
+            </div>
+            <hr>
+            <div class="menu-item">
+                <input type="checkbox" id="nightControl"/>
+                <label for="nightControl" class="checkbox">Night</label>
+            </div>
+            <hr>
+            <div class="menu-item">
+                <input type="checkbox" id="darknessControl"/>
+                <label for="darknessControl" class="checkbox">Darkness</label>
+            </div>
+            <hr>
+            <div class="menu-item">
+                <label class="select-label" for="version-select">Version</label><!--
+                 --><select id="version-select">
+                    <option value="700">7.00</option>
+                    <option value="687">6.87</option>
+                </select>
+            </div>
+            <hr>
+            <div class="menu-item">
+                <input type="button" id="reset" value="Reset Map"/>
             </div>
         </div>
-        <div id="overlays-container" class="controls-container right">
+    </div>
+    <div id="map"></div>
+    <div id="info">
+        <a href="javascript:void(0)" id="info-close-btn" class="close btn pos-right">&times;</a>
+        <div id="info-content">
+        
         </div>
-        <div id="visible-area"></div>
-        <!-- @if NODE_ENV='dev' -->
-        <script src="../src/OpenLayers.js"></script>
-        <script src="bundle.js"></script>
-        <script>InteractiveMap('http://devilesk.com/media/images/map/', 'img/map_data.png');</script>
-        <!-- @endif -->
-        <!-- @if NODE_ENV='prod' !>
-        <script src="bundle.min.js"></script>
-        <script>InteractiveMap('<!-- @echo map_data_path !>', '<!-- @echo vision_data_image_path !>');</script>
-        <!-- @include .analytics.html !>
-        <!-- @endif -->
-	</body>
+    </div>
+    <div id="right-menu" class="menu-panel pos-right collapsed-horizontal">
+        <a href="javascript:void(0)" id="right-menu-close-btn" class="close btn pos-right">&times;</a>
+        <input type="radio" id="right-menu-back" name="right-menu" value="back" class="hidden" checked="checked" />
+        <label id="back-btn" class="back btn pos-left hidden" for="right-menu-back">&#x2190;</label>
+        <div class="back-group">
+            <div class="menu-contents">
+                <div class="menu-item">
+                    <input type="radio" id="overlay-menu-toggle" name="right-menu" value="overlay" class="inverse" />
+                    <label for="overlay-menu-toggle" class="checkbox hidden">Overlays</label>
+                    <div id="overlay-menu" class="menu-item-group sub-menu collapsed"><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-drawn-circles"/>
+                            <label for="option-drawn-circles" class="checkbox">Drawn Circles</label>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-spawn-boxes"/>
+                            <label for="option-spawn-boxes" class="checkbox">Spawn Boxes</label>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-placed-wards"/>
+                            <label for="option-placed-wards" class="checkbox">Placed Wards</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <input type="radio" id="structure-menu-toggle" name="right-menu" value="structure" class="inverse" />
+                    <label for="structure-menu-toggle" class="checkbox hidden">Structures</label>
+                    <div id="structure-menu" class="menu-item-group sub-menu collapsed"></div>
+                </div>
+                <div class="menu-item">
+                    <input type="radio" id="object-menu-toggle" name="right-menu" value="object" class="inverse" />
+                    <label for="object-menu-toggle" class="checkbox hidden">Objects</label>
+                    <div id="object-menu" class="menu-item-group sub-menu collapsed"></div>
+                </div>
+                <div class="menu-item">
+                    <input type="radio" id="base-menu-toggle" name="right-menu" value="base" class="inverse" />
+                    <label for="base-menu-toggle" class="checkbox hidden">Base Layers</label>
+                    <div id="base-menu" class="menu-item-group sub-menu collapsed"><!--
+                     --><div class="menu-item">
+                            <input type="radio" name="base-type" value="700" id="base-700-option" checked="checked" />
+                            <label for="base-700-option" class="checkbox">7.00</label>
+                            <div id="base-700-menu" class="menu-item-group sub-menu collapsed"></div>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="radio" name="base-type" value="687" id="base-687-option" />
+                            <label for="base-687-option" class="checkbox">6.87</label>
+                            <div id="base-687-menu" class="menu-item-group sub-menu collapsed"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a id="menu-left-open-btn" href="javascript:void(0)" class="open btn pos-left"></a>
+    <div id="tool-btn-container">
+        <a id="btn-zoom-in" href="javascript:void(0)" class="tool btn pos-left">+</a>
+        <a id="btn-zoom-out" href="javascript:void(0)" class="tool btn pos-left">&minus;</a>
+        <a id="btn-tree" href="javascript:void(0)" class="tool btn pos-left"></a>
+        <a id="btn-ward" href="javascript:void(0)" class="tool btn pos-left"></a>
+    </div>
+    <div id="menu-right-open-btn-group" class="pos-right">
+        <a id="right-menu-open-btn" href="javascript:void(0)" class="open btn"></a>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol-debug.js"></script>
+    <script src="bundle.js"></script>
+  </body>
 </html>
