--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,6 @@
     <title>Using Browserify with OpenLayers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
-    <link rel="stylesheet" href="ol3-popup.css" type="text/css">
     <link rel="stylesheet" href="app.css" type="text/css">
   </head>
   <body>
@@ -74,11 +73,12 @@
         </div>
     </div>
     <div id="map"></div>
-    <div id="info">
+    <div id="notification" class="slideUp">
+        <div id="notification-content" class="notification-content">Test</div>
+    </div>
+    <div id="info" class="slideDown">
         <a href="javascript:void(0)" id="info-close-btn" class="close btn pos-right">&times;</a>
-        <div id="info-content">
-        
-        </div>
+        <div id="info-content" class="info-content"></div>
     </div>
     <div id="right-menu" class="menu-panel pos-right collapsed-horizontal">
         <a href="javascript:void(0)" id="right-menu-close-btn" class="close btn pos-right">&times;</a>
@@ -101,6 +101,22 @@
                      --><div class="menu-item">
                             <input type="checkbox" id="option-placed-wards"/>
                             <label for="option-placed-wards" class="checkbox">Placed Wards</label>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-dayVision"/>
+                            <label for="option-dayVision" class="checkbox">Day Vision Range</label>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-nightVision"/>
+                            <label for="option-nightVision" class="checkbox">Night Vision Range</label>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-trueSight"/>
+                            <label for="option-trueSight" class="checkbox">True Sight Range</label>
+                        </div><!--
+                     --><div class="menu-item">
+                            <input type="checkbox" id="option-attackRange"/>
+                            <label for="option-attackRange" class="checkbox">Attack Range</label>
                         </div>
                     </div>
                 </div>
@@ -144,6 +160,7 @@
         <a id="right-menu-open-btn" href="javascript:void(0)" class="open btn"></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol-debug.js"></script>
+    <!--<script src="../ol-custom.js"></script>-->
     <script src="bundle.js"></script>
   </body>
 </html>
