--- a/www/index.html
+++ b/www/index.html
@@ -105,10 +105,6 @@
                             <label for="option-drawn-circles" class="checkbox">Drawn Circles</label>
                         </div><!--
                      --><div class="menu-item">
-                            <input type="checkbox" id="option-spawn-boxes"/>
-                            <label for="option-spawn-boxes" class="checkbox">Spawn Boxes</label>
-                        </div><!--
-                     --><div class="menu-item">
                             <input type="checkbox" id="option-placed-wards"/>
                             <label for="option-placed-wards" class="checkbox">Placed Wards</label>
                         </div><!--
@@ -137,7 +133,7 @@
                 </div>
                 <div class="menu-item">
                     <input type="radio" id="object-menu-toggle" name="right-menu" value="object" class="inverse" />
-                    <label for="object-menu-toggle" class="checkbox hidden">Objects</label>
+                    <label for="object-menu-toggle" class="checkbox hidden">Neutral</label>
                     <div id="object-menu" class="menu-item-group sub-menu collapsed"></div>
                 </div>
                 <div class="menu-item">
