--- a/www/index.html
+++ b/www/index.html
@@ -28,13 +28,13 @@
             <div class="circle-icon"></div>
         </a>
     </div>
-    <a id="menu-left-open-btn" href="javascript:void(0)" class="open btn">
+    <a id="menu-left-open-btn" href="javascript:void(0)" class="btn-open btn">
         <div class="gear"></div>
     </a>
-    <a id="menu-right-open-btn" href="javascript:void(0)" class="open btn"></a>
+    <a id="menu-right-open-btn" href="javascript:void(0)" class="btn-open btn"></a>
     <div id="menu-left" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
-            <a href="javascript:void(0)" id="menu-left-close-btn" class="close btn">&times;</a>
+            <a href="javascript:void(0)" id="menu-left-close-btn" class="btn-close btn">&times;</a>
             <div class="menu-contents">
                 <div class="menu-item">
                     <input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />
@@ -105,9 +105,9 @@
     </div>
     <div id="menu-right" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
-            <a href="javascript:void(0)" id="menu-right-close-btn" class="close btn">&times;</a>
+            <a href="javascript:void(0)" id="menu-right-close-btn" class="btn-close btn">&times;</a>
             <input type="radio" id="right-menu-back" name="right-menu" value="back" class="hidden" checked="checked" />
-            <label id="back-btn" class="back btn" for="right-menu-back">&#x2190;</label>
+            <label id="back-btn" class="btn-back" for="right-menu-back">&#x2190;</label>
             <div class="back-group">
                 <div class="menu-contents">
                     <div class="menu-item">
@@ -174,7 +174,7 @@
         <div id="notification-content" class="message-content">Test</div>
     </div>
     <div id="info" class="message slideDown">
-        <a href="javascript:void(0)" id="info-close-btn" class="close btn">&times;</a>
+        <a href="javascript:void(0)" id="info-close-btn" class="btn-close btn">&times;</a>
         <div id="info-content" class="message-content"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol-debug.js"></script>
