--- a/www/index.html
+++ b/www/index.html
@@ -10,31 +10,26 @@
 
     <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
     <link rel="stylesheet" href="app.css" type="text/css">
-    <link rel="stylesheet" href="menu.css" type="text/css">
-    <link rel="stylesheet" href="gear.css" type="text/css">
-    <link rel="stylesheet" href="measure.css" type="text/css">
-    <link rel="stylesheet" href="message.css" type="text/css">
-    <link rel="stylesheet" href="tools.css" type="text/css">
   </head>
   <body>
     <div id="map"></div>
     <div id="tool-btn-container"><!--
-     --><a id="btn-zoom-in" href="javascript:void(0)" class="tool btn"><div class="zoom-label">+</div></a><!--
-     --><a id="btn-zoom-out" href="javascript:void(0)" class="tool btn"><div class="zoom-label">&minus;</div></a><!--
-     --><a id="btn-tree" href="javascript:void(0)" class="tool btn"></a><!--
-     --><a id="btn-ward" href="javascript:void(0)" class="tool btn"></a><!--
-     --><a id="btn-measure" href="javascript:void(0)" class="tool btn">
+     --><a id="btn-zoom-in" href="javascript:void(0)" class="btn-tool"><div class="zoom-label">+</div></a><!--
+     --><a id="btn-zoom-out" href="javascript:void(0)" class="btn-tool"><div class="zoom-label">&minus;</div></a><!--
+     --><a id="btn-tree" href="javascript:void(0)" class="btn-tool"></a><!--
+     --><a id="btn-ward" href="javascript:void(0)" class="btn-tool"></a><!--
+     --><a id="btn-measure" href="javascript:void(0)" class="btn-tool">
             <div class="line-icon"></div>
             <div class="circle-icon"></div>
         </a>
     </div>
-    <a id="menu-left-open-btn" href="javascript:void(0)" class="btn-open btn">
+    <a id="menu-left-open-btn" href="javascript:void(0)" class="btn-open">
         <div class="gear"></div>
     </a>
-    <a id="menu-right-open-btn" href="javascript:void(0)" class="btn-open btn"></a>
+    <a id="menu-right-open-btn" href="javascript:void(0)" class="btn-open"></a>
     <div id="menu-left" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
-            <a href="javascript:void(0)" id="menu-left-close-btn" class="btn-close btn">&times;</a>
+            <a href="javascript:void(0)" id="menu-left-close-btn" class="btn-close">&times;</a>
             <div class="menu-contents">
                 <div class="menu-item">
                     <input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />
@@ -105,7 +100,7 @@
     </div>
     <div id="menu-right" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
-            <a href="javascript:void(0)" id="menu-right-close-btn" class="btn-close btn">&times;</a>
+            <a href="javascript:void(0)" id="menu-right-close-btn" class="btn-close">&times;</a>
             <input type="radio" id="right-menu-back" name="right-menu" value="back" class="hidden" checked="checked" />
             <label id="back-btn" class="btn-back" for="right-menu-back">&#x2190;</label>
             <div class="back-group">
@@ -170,11 +165,11 @@
             </div>
         </div>
     </div>
-    <div id="notification" class="message slideUp">
-        <div id="notification-content" class="message-content">Test</div>
+    <div id="notification" class="slideUp">
+        <div id="notification-content" class="message-content"></div>
     </div>
-    <div id="info" class="message slideDown">
-        <a href="javascript:void(0)" id="info-close-btn" class="btn-close btn">&times;</a>
+    <div id="info" class="slideDown">
+        <a href="javascript:void(0)" id="info-close-btn" class="btn-close">&times;</a>
         <div id="info-content" class="message-content"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol-debug.js"></script>
