--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
      --><a id="btn-zoom-out" href="javascript:void(0)" class="btn-tool"><div class="zoom-label">&minus;</div></a><!--
      --><a id="btn-tree" href="javascript:void(0)" class="btn-tool"></a><!--
      --><a id="btn-ward" href="javascript:void(0)" class="btn-tool"></a><!--
-     --><a id="btn-measure" href="javascript:void(0)" class="btn-tool">
+     --><a id="btn-measure" href="javascript:void(0)" class="btn-tool" measure-type="line">
             <div class="line-icon"></div>
             <div class="circle-icon"></div>
         </a>
@@ -101,13 +101,13 @@
     <div id="menu-right" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
             <a href="javascript:void(0)" id="menu-right-close-btn" class="btn-close">&times;</a>
-            <input type="radio" id="right-menu-back" name="right-menu" value="back" class="hidden" checked="checked" />
-            <label id="back-btn" class="btn-back" for="right-menu-back">&#x2190;</label>
+            <input type="radio" id="menu-right-back-btn" name="right-menu" value="back" checked="checked" />
+            <label id="back-btn" class="btn-back" for="menu-right-back-btn">&#x2190;</label>
             <div class="back-group">
                 <div class="menu-contents">
                     <div class="menu-item">
-                        <input type="radio" id="overlay-menu-toggle" name="right-menu" value="overlay" class="inverse" />
-                        <label for="overlay-menu-toggle" class="checkbox hidden">Overlays</label>
+                        <input type="radio" id="overlay-menu-toggle" name="right-menu" value="overlay" />
+                        <label for="overlay-menu-toggle" class="root checkbox inverse">Overlays</label>
                         <div id="overlay-menu" class="menu-item-group sub-menu"><!--
                          --><div class="menu-item">
                                 <input type="checkbox" id="option-drawn-circles"/>
@@ -136,18 +136,18 @@
                         </div>
                     </div>
                     <div class="menu-item">
-                        <input type="radio" id="structure-menu-toggle" name="right-menu" value="structure" class="inverse" />
-                        <label for="structure-menu-toggle" class="checkbox hidden">Structures</label>
+                        <input type="radio" id="structure-menu-toggle" name="right-menu" value="structure" />
+                        <label for="structure-menu-toggle" class="root checkbox inverse">Structures</label>
                         <div id="structure-menu" class="menu-item-group sub-menu"></div>
                     </div>
                     <div class="menu-item">
-                        <input type="radio" id="object-menu-toggle" name="right-menu" value="object" class="inverse" />
-                        <label for="object-menu-toggle" class="checkbox hidden">Neutral</label>
+                        <input type="radio" id="object-menu-toggle" name="right-menu" value="object" />
+                        <label for="object-menu-toggle" class="root checkbox inverse">Neutral</label>
                         <div id="object-menu" class="menu-item-group sub-menu"></div>
                     </div>
                     <div class="menu-item">
-                        <input type="radio" id="base-menu-toggle" name="right-menu" value="base" class="inverse" />
-                        <label for="base-menu-toggle" class="checkbox hidden">Base Layers</label>
+                        <input type="radio" id="base-menu-toggle" name="right-menu" value="base" />
+                        <label for="base-menu-toggle" class="root checkbox inverse">Base Layers</label>
                         <div id="base-menu" class="menu-item-group sub-menu"><!--
                          --><div class="menu-item">
                                 <input type="radio" name="base-type" value="700" id="base-700-option" checked="checked" />
